# fields-and-cases

./: .gitignore  CHANGELOG.md  README.md  fields-and-cases.cabal  haskell-codegen.cabal  hie.yaml
lib/: FieldsAndCases.hs
tests/: Readme.hs  Readme.rs  Readme.rs.bk  Readme1.hs  Readme2.hs  Readme2.rs  Spec.hs  test.hs
tests/outputs/: demo.rs  demo.ts
