cabal-version:      2.4
name:               fields-and-cases
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Simplify generation from Haskell types to other languages

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michael Bock
maintainer:         no-day@posteo.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-opts
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingVia
    DeriveAnyClass
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    UndecidableSuperClasses

library
  import:          common-opts
  exposed-modules: FieldsAndCases
  build-depends:
    , base                ^>=4.17.2.0
    , relude
    , string-conversions

  hs-source-dirs:  lib

test-suite test
  import:         common-opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        test.hs
  build-depends:
    , base                ^>=4.17.2.0
    , fields-and-cases
    , lima
    , relude
    , string-conversions
    , tasty
    , tasty-hunit
