cabal-version:      2.4
name:               fields-and-cases
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Simlify generation from Haskell types to other languages

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michael Bock
maintainer:         no-day@posteo.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    -- Modules exported by the library.
    exposed-modules:
      FieldsAndCases

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , relude
    hs-source-dirs:   lib
    default-language: Haskell2010

